[package]
name = "tgbot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1.41.0", features = ["full"] }
image = "0.25.2"
qrcode = "0.14.1"
rand = "0.8.5"
regex = "1.11.1"
